frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awesome-cats-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awesome-cats-frontend
  template:
    metadata:
      labels:
        app: awesome-cats-frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/final_429106/awesome_cats_frontend:latest
          ports:
            - containerPort: 3000
