ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod" 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  
    external-dns.alpha.kubernetes.io/hostname: "mukhtasar.online"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - mukhtasar.online
      secretName: cats-tls  # Name of the Secret where the certificate will be stored
 
  rules:
  - host: mukhtasar.online
    http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 3000
      - path: /.well-known/acme-challenge
        pathType: ImplementationSpecific
        backend:
          service:
            name: cert-manager
            port:
              number: 8089
  ingressClassName: nginx
